--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="token">007eJxTYPh5sP6dM/PBpa8tisInhQr8rW/bq1aQ/SxHjE25ooYjcL8CQ0qSqUWSsWWyRWKimUlKmpFFoqGFcYqBpYlBmrmFiZmRbvnp1IZARgaeVfwsjAwQCOJzM5SkFpc4ZyTm5aXmMDAAAAv+ILg=</string>
     <string name="appId">db58b39c8aa64df28a183d0940f78462</string>
     <string name="channel">testChannel</string>
+    <string name="title_activity_main456">MainActivity456</string>
 </resources>
